--- a/SpaDomacaZadaca01/SpaDomacaZadaca01.vcxproj
+++ b/SpaDomacaZadaca01/SpaDomacaZadaca01.vcxproj
@@ -161,6 +161,24 @@
   <ItemGroup>
     <ClInclude Include="Cvijet.h" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="flowerpoints">
+      <FileType>Text</FileType>
+      <DeploymentContent>true</DeploymentContent>
+    </None>
+    <None Include="stalkpoints" />
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="textures\skybox.png" />
+    <Image Include="textures\sunmun-0.png" />
+    <Image Include="textures\sunmun-1.png" />
+    <Image Include="textures\sunmun-2.png" />
+    <Image Include="textures\sunmun-3.png" />
+    <Image Include="textures\sunmun-4.png" />
+    <Image Include="textures\sunmun-5.png" />
+    <Image Include="textures\sunmun-6.png" />
+    <Image Include="textures\sunmun-7.png" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
