--- a/SpaDomacaZadaca01/SpaDomacaZadaca01.vcxproj.filters
+++ b/SpaDomacaZadaca01/SpaDomacaZadaca01.vcxproj.filters
@@ -21,9 +21,15 @@
     <ClCompile Include="Cvijet.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Nebo.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Cvijet.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Nebo.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
