--- a/SpaDomacaZadaca01/SpaDomacaZadaca01.vcxproj
+++ b/SpaDomacaZadaca01/SpaDomacaZadaca01.vcxproj
@@ -161,6 +161,9 @@
   <ItemGroup>
     <ClInclude Include="Cvijet.h" />
   </ItemGroup>
+  <ItemGroup>
+    <Image Include="Matej_is_cute.png" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
