--- a/SpaDomacaZadaca01/SpaDomacaZadaca01.vcxproj.filters
+++ b/SpaDomacaZadaca01/SpaDomacaZadaca01.vcxproj.filters
@@ -18,5 +18,37 @@
     <ClCompile Include="Source.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Cvijet.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Trava.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Planina.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Pozadina.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Kisa.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Cvijet.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Trava.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Planina.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Pozadina.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Kisa.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
