--- a/SpaDomacaZadaca01/SpaDomacaZadaca01.vcxproj
+++ b/SpaDomacaZadaca01/SpaDomacaZadaca01.vcxproj
@@ -162,6 +162,9 @@
   <ItemGroup>
     <ClInclude Include="Flowie.h" />
   </ItemGroup>
+  <ItemGroup>
+    <Image Include="yellow-jacket.png" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
